# SeismicUtils

./: .gitignore  README.md  pyproject.toml
seismicutils/: __init__.py  calculus.py  records.py  spectrum.py
