[tool.poetry]
name = "seismicutils"
version = "0.1.0"
description = ""
authors = ["Wenchen Lie <438171766@qq.com>"]
license = "GPT-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
scipy = "^1.14.1"
pandas = "^2.2.2"
dill = "^0.3.8"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
